--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link id="appFavicon" rel="icon" type="image/x-icon" href="favicon.ico">  
+<!--  <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/icostats/logos/nxt.png">-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuJgMRc84UWwMRlXpmR4ms9CECA3nG6Co&callback=initMap"
   type="text/javascript"></script>
@@ -16,6 +17,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>  
 </head>
 <body>
+<!-- <app-root-app-clock></app-root-app-clock> -->
   <app-root></app-root>
   <footer class="footer footerClass stylish-color-dark ooter-copyright py-3 text-center">
     <p> &copy Whtie Hill 2018</p>
